--- a/locales/fr.json
+++ b/locales/fr.json
@@ -125,5 +125,7 @@
 	"Can't save torrent to your download dir, error: %s": "Impossible de sauvegarder votre torrent, erreur: %s",
 	"(%s%% downloaded)":"(%s%% téléchargé)",
 	"Torrent successfully saved to your ht5 download directory !":"Torrent sauvegardé avec succès dans votre dossier de téléchargement ht5 !",
-	"Yes":"Oui"
+	"Yes":"Oui",
+	"Please enter your sudo/admin password to install the update":"Merci d'entrer votre mot de passe sudo/admin pour installer la mise à jour",
+	"Wrong password, please retry or cancel...":"Mot de passe erroné, merci de réessayer ou annuler..."
 }
