--- a/locales/fr.json
+++ b/locales/fr.json
@@ -136,5 +136,6 @@
 	"trancoding disabled": "trancoding disabled",
 	"play and stop": "mode normal",
 	"playlist mode": "mode liste de lecture",
-	"repeat mode": "mode boucle"
+	"repeat mode": "mode boucle",
+	"Click ok to launch the update installer" : "Cliquez sur ok pour démarrer l'installation !"
 }
