add external player choice

--- a/locales/en.json
+++ b/locales/en.json
@@ -122,5 +122,6 @@
 	"Connecting... please wait (test %s/%s)": "Connecting... please wait (test %s/%s)",
 	"Downloading %s%% done at %s": "Downloading %s%% done at %s",
 	"transcoding enabled": "transcoding enabled",
-	"Downloading plugins...": "Downloading plugins..."
+	"Downloading plugins...": "Downloading plugins...",
+	"Default player:": "Default player:"
 }
